# lsp-experiments

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
crates/compiler/: Cargo.toml
crates/compiler/src/: parser.rs  typecheck.rs  types.rs
crates/compiler/src/parser/: combinators.rs  constructors.rs  convert.rs  parse_error.rs  primitives.rs  types.rs
crates/compiler/src/typecheck/: expr_utils.rs  type_error.rs  warning.rs
crates/compiler/tests/: tests.rs
crates/compiler/tests/snapshots/: tests__parse_errors-2.snap  tests__parse_errors-3.snap  tests__parse_errors-4.snap  tests__parse_errors-5.snap  tests__parse_errors-6.snap  tests__parse_errors-7.snap  tests__parse_errors-8.snap  tests__parse_errors.snap  tests__typecheck_failure-2.snap  tests__typecheck_failure-3.snap  tests__typecheck_failure-5.snap  tests__typecheck_failure-6.snap  tests__typecheck_failure.snap
crates/lsp/: Cargo.toml
crates/lsp/src/: diagnostic.rs  hover.rs  main.rs
src/: lib.rs  main.rs  parser.rs  typecheck.rs  types.rs
src/typecheck/: type_error.rs
static/: test.frame
tests/: tests.rs
tests/snapshots/: tests__typecheck_failure-4.snap  tests__typecheck_failure.snap
