[package]
name = "frame"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "frame"
path = "bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.4.1"
clap = { version = "4.5.19", features = ["derive"] }
nom = "7.1.3"
nom_locate = "4.2.0"

[dev-dependencies]
insta = "*"
