[package]
name = "lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "frame-lsp"
path = "./src/main.rs"

[dependencies]
frame = { path = "../compiler" }

dashmap = "*"
nom = "7.1.3"
tower-lsp = "0.20"
tokio = { version = "1.17", features = ["rt-multi-thread","macros","io-std","io-util"] }
